Implement initial CLI tool.

--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -280,7 +280,46 @@
     "        self\n",
     "    ) -> 'NegativeFactory':  # A factory for creating negative variants\n",
     "        \"\"\"Return a negative variant factory.\"\"\"\n",
-    "        return NegativeFactory(self.prefix, self.config)"
+    "        return NegativeFactory(self.prefix, self.config)\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get detailed information about this scaled factory.\"\"\"\n",
+    "        valid_inputs = []\n",
+    "        \n",
+    "        if self.config.numeric:\n",
+    "            valid_inputs.append(f\"Numeric scales: 0-{max(NUMERIC_SCALE)}\")\n",
+    "        \n",
+    "        if self.config.decimals:\n",
+    "            valid_inputs.append(f\"Decimal scales: {', '.join(str(d) for d in DECIMAL_SCALE)}\")\n",
+    "        \n",
+    "        if self.config.fractions:\n",
+    "            valid_inputs.append(f\"Fractions: {len(FRACTIONS)} supported (e.g., 1/2, 2/3, 3/4)\")\n",
+    "        \n",
+    "        if self.config.named:\n",
+    "            named_values = [scale.name for scale in self.config.named]\n",
+    "            valid_inputs.append(f\"Named scales: {', '.join(named_values)}\")\n",
+    "        \n",
+    "        if self.config.special:\n",
+    "            valid_inputs.append(f\"Special values: {', '.join(self.config.special.keys())}\")\n",
+    "        \n",
+    "        valid_inputs.append(\"Arbitrary values: Any string with CSS units (e.g., '10px', '2.5rem')\")\n",
+    "        valid_inputs.append(\"Custom properties: CSS variables starting with -- (e.g., '--spacing')\")\n",
+    "        \n",
+    "        options = {\n",
+    "            'prefix': self.prefix,\n",
+    "            'supports_negative': self.config.negative\n",
+    "        }\n",
+    "        \n",
+    "        if self.config.negative:\n",
+    "            options['negative_access'] = 'Use .negative property or negative=True parameter'\n",
+    "        \n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': valid_inputs,\n",
+    "            'options': options\n",
+    "        }"
    ]
   },
   {
@@ -409,7 +448,55 @@
     "        self\n",
     "    ) -> 'NegativeFactory':  # A factory for creating negative variants\n",
     "        \"\"\"Return a negative variant factory.\"\"\"\n",
-    "        return NegativeFactory(self.prefix, self.config)"
+    "        return NegativeFactory(self.prefix, self.config)\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get detailed information about this directional factory.\"\"\"\n",
+    "        # Get valid inputs from the config (same as ScaledFactory)\n",
+    "        valid_inputs = []\n",
+    "        \n",
+    "        if self.config.numeric:\n",
+    "            valid_inputs.append(f\"Numeric scales: 0-{max(NUMERIC_SCALE)}\")\n",
+    "        \n",
+    "        if self.config.decimals:\n",
+    "            valid_inputs.append(f\"Decimal scales: {', '.join(str(d) for d in DECIMAL_SCALE)}\")\n",
+    "        \n",
+    "        if self.config.fractions:\n",
+    "            valid_inputs.append(f\"Fractions: {len(FRACTIONS)} supported (e.g., 1/2, 2/3, 3/4)\")\n",
+    "        \n",
+    "        if self.config.named:\n",
+    "            named_values = [scale.name for scale in self.config.named]\n",
+    "            valid_inputs.append(f\"Named scales: {', '.join(named_values)}\")\n",
+    "        \n",
+    "        if self.config.special:\n",
+    "            valid_inputs.append(f\"Special values: {', '.join(self.config.special.keys())}\")\n",
+    "        \n",
+    "        valid_inputs.append(\"Arbitrary values: Any string with CSS units (e.g., '10px', '2.5rem')\")\n",
+    "        valid_inputs.append(\"Custom properties: CSS variables starting with -- (e.g., '--spacing')\")\n",
+    "        \n",
+    "        options = {\n",
+    "            'prefix': self.prefix,\n",
+    "            'supports_negative': self.config.negative,\n",
+    "            'directional_variants': {\n",
+    "                't': 'top',\n",
+    "                'r': 'right', \n",
+    "                'b': 'bottom',\n",
+    "                'l': 'left',\n",
+    "                'x': 'horizontal (left and right)',\n",
+    "                'y': 'vertical (top and bottom)'\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        if self.config.negative:\n",
+    "            options['negative_access'] = 'Use .negative property or negative=True parameter'\n",
+    "        \n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': valid_inputs,\n",
+    "            'options': options\n",
+    "        }"
    ]
   },
   {
@@ -692,7 +779,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '1/6', '2/12', '1/5', '1/4', '3/12', '1/3', '4/12', '2/6', '2/5', '5/12', '6/12', '3/6', '1/2', '2/4', '7/12', '3/5', '4/6', '8/12', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '4/12', '2/6', '1/3', '2/5', '5/12', '3/6', '1/2', '2/4', '6/12', '7/12', '3/5', '8/12', '2/3', '4/6', '3/4', '9/12', '4/5', '5/6', '10/12', '11/12']\n"
      ]
     }
    ],
@@ -870,7 +957,19 @@
     "        # Also check without conversion\n",
     "        if name in self._values:\n",
     "            return self._values[name]\n",
-    "        raise AttributeError(f\"'{self.__class__.__name__}' object has no attribute '{name}'\")"
+    "        raise AttributeError(f\"'{self.__class__.__name__}' object has no attribute '{name}'\")\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this simple factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'No inputs - access values as attributes',\n",
+    "            'options': {\n",
+    "                'available_values': list(self._values.keys())\n",
+    "            }\n",
+    "        }"
    ]
   },
   {
