--- a/nbs/core/base.ipynb
+++ b/nbs/core/base.ipynb
@@ -472,7 +472,21 @@
     "        self\n",
     "    ) -> str:  # A formatted description of the factory\n",
     "        \"\"\"Return a formatted description of this factory.\"\"\"\n",
-    "        return self._doc"
+    "        return self._doc\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"\n",
+    "        Get detailed information about this factory's options and valid inputs.\n",
+    "        \n",
+    "        Should return a dictionary with keys like:\n",
+    "        - 'description': Factory description\n",
+    "        - 'valid_inputs': List/description of valid input values\n",
+    "        - 'options': Available options or methods\n",
+    "        \"\"\"\n",
+    "        pass"
    ]
   },
   {
@@ -536,7 +550,20 @@
     "        \"\"\"Handle named values (e.g., w.full, h.screen).\"\"\"\n",
     "        instance = self.utility_class(self.prefix)\n",
     "        instance._value = name.replace(\"_\", \"-\")\n",
-    "        return instance"
+    "        return instance\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this utility factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'Various Tailwind values (implementation specific)',\n",
+    "            'options': {\n",
+    "                'prefix': self.prefix,\n",
+    "                'utility_class': self.utility_class.__name__\n",
+    "            }\n",
+    "        }"
    ]
   },
   {
@@ -754,7 +781,19 @@
     "        self\n",
     "    ) -> str:  # The utility class string\n",
     "        \"\"\"Build and return the utility class string.\"\"\"\n",
-    "        return self._value"
+    "        return self._value\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this single-value factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'No inputs - returns a fixed value',\n",
+    "            'options': {\n",
+    "                'value': self._value\n",
+    "            }\n",
+    "        }"
    ]
   },
   {
