--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Optional, Union, Literal, List, Dict\n",
+    "from typing import Optional, Union, Literal, List, Dict, Any\n",
     "from dataclasses import dataclass\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    TailwindScale, combine_classes, StandardUtility, UtilityFactory,\n",
@@ -240,6 +240,46 @@
     "    ) -> 'NegativeFactory':  # A factory for creating negative variants\n",
     "        \"\"\"Return a negative variant factory.\"\"\"\n",
     "        return NegativeFactory(self.prefix, self.config)\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get detailed information about this inset factory.\"\"\"\n",
+    "        # Get valid inputs from the config (similar to ScaledFactory)\n",
+    "        from cjm_fasthtml_tailwind.builders.scales import NUMERIC_SCALE, FRACTIONS\n",
+    "        \n",
+    "        valid_inputs = []\n",
+    "        \n",
+    "        if self.config.numeric:\n",
+    "            valid_inputs.append(f\"Numeric scales: 0-{max(NUMERIC_SCALE)}\")\n",
+    "        \n",
+    "        if self.config.fractions:\n",
+    "            valid_inputs.append(f\"Fractions: {len(FRACTIONS)} supported (e.g., 1/2, 2/3, 3/4)\")\n",
+    "        \n",
+    "        if self.config.special:\n",
+    "            valid_inputs.append(f\"Special values: {', '.join(self.config.special.keys())}\")\n",
+    "        \n",
+    "        valid_inputs.append(\"Arbitrary values: Any string with CSS units (e.g., '10px', '2.5rem')\")\n",
+    "        valid_inputs.append(\"Custom properties: CSS variables starting with -- (e.g., '--spacing')\")\n",
+    "        \n",
+    "        options = {\n",
+    "            'prefix': self.prefix,\n",
+    "            'supports_negative': self.config.negative,\n",
+    "            'directional_variants': {\n",
+    "                'x': 'horizontal (left and right)',\n",
+    "                'y': 'vertical (top and bottom)'\n",
+    "            },\n",
+    "            'note': 'Also available as individual directions: top, right, bottom, left, start, end'\n",
+    "        }\n",
+    "        \n",
+    "        if self.config.negative:\n",
+    "            options['negative_access'] = 'Use .negative property or negative=True parameter'\n",
+    "        \n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': valid_inputs,\n",
+    "            'options': options\n",
+    "        }\n",
     "\n",
     "# Inset utilities (top, right, bottom, left)\n",
     "inset = InsetDirectionalFactory(\"inset\", INSET_CONFIG) # The inset factory for positioning\n",
@@ -330,6 +370,22 @@
     "        if name in self._values:\n",
     "            return self._values[name]\n",
     "        raise AttributeError(f\"'OverflowFactory' object has no attribute '{name}'\")\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the overflow factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'Access values as attributes',\n",
+    "            'options': {\n",
+    "                'available_values': OVERFLOW_VALUES,\n",
+    "                'directional_variants': {\n",
+    "                    'x': 'horizontal overflow',\n",
+    "                    'y': 'vertical overflow'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "overflow = OverflowFactory() # The overflow factory"
    ]
@@ -594,6 +650,23 @@
     "        elif is_arbitrary_value(value) or \" \" in value:\n",
     "            return f\"object-[{value}]\"\n",
     "        return f\"object-{value}\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the object position factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [\n",
+    "                'Access fixed positions as attributes',\n",
+    "                'Call with custom position (e.g., \"50% 25%\")',\n",
+    "                'CSS custom properties (e.g., \"--custom-position\")'\n",
+    "            ],\n",
+    "            'options': {\n",
+    "                'fixed_positions': list(self._values.keys()),\n",
+    "                'custom_usage': 'Call factory with position string: object_position(\"50% 25%\")'\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "# Create object position factory\n",
     "object_position = ObjectPositionFactory(\n",
@@ -782,6 +855,23 @@
     "        elif is_arbitrary_value(value):\n",
     "            return f\"aspect-[{value}]\"\n",
     "        return f\"aspect-{value}\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the aspect ratio factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [\n",
+    "                'Access fixed ratios as attributes',\n",
+    "                'Call with ratio (e.g., \"16/9\", \"4/3\")',\n",
+    "                'CSS custom properties (e.g., \"--custom-ratio\")'\n",
+    "            ],\n",
+    "            'options': {\n",
+    "                'fixed_ratios': list(self._values.keys()),\n",
+    "                'custom_usage': 'Call factory with ratio: aspect(\"16/9\")'\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "# Create aspect ratio factory\n",
     "aspect = AspectRatioFactory(ASPECT_RATIO_VALUES, \"Aspect ratio utilities for controlling element proportions\") # The aspect ratio factory"
@@ -930,6 +1020,25 @@
     "        self.before = SimpleFactory(BREAK_BEFORE_VALUES, \"Break-before utilities for controlling breaks before an element\")\n",
     "        self.after = SimpleFactory(BREAK_AFTER_VALUES, \"Break-after utilities for controlling breaks after an element\")\n",
     "        self.inside = SimpleFactory(BREAK_INSIDE_VALUES, \"Break-inside utilities for controlling breaks within an element\")\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the break factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'Access sub-factories as attributes (before, after, inside)',\n",
+    "            'options': {\n",
+    "                'sub_factories': {\n",
+    "                    'before': 'Control breaks before an element',\n",
+    "                    'after': 'Control breaks after an element',\n",
+    "                    'inside': 'Control breaks within an element'\n",
+    "                },\n",
+    "                'before_values': list(BREAK_BEFORE_VALUES.keys()),\n",
+    "                'after_values': list(BREAK_AFTER_VALUES.keys()),\n",
+    "                'inside_values': list(BREAK_INSIDE_VALUES.keys())\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "# Create the break factory\n",
     "break_util = BreakFactory() # The break factory"
@@ -1012,6 +1121,22 @@
     "        if name in self._values:\n",
     "            return self._values[name]\n",
     "        raise AttributeError(f\"'OverscrollFactory' object has no attribute '{name}'\")\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the overscroll factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'Access values as attributes',\n",
+    "            'options': {\n",
+    "                'available_values': OVERSCROLL_VALUES,\n",
+    "                'directional_variants': {\n",
+    "                    'x': 'horizontal overscroll behavior',\n",
+    "                    'y': 'vertical overscroll behavior'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "# Create the overscroll factory\n",
     "overscroll = OverscrollFactory() # The overscroll factory"
@@ -1258,14 +1383,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc6c5b51-e1f5-4ea3-8dbc-d037aa19dd6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b212f5d-7150-4e23-898f-4aec707a3fbe",
    "metadata": {},
    "outputs": [],
    "source": []
