--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -435,6 +435,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0388de5-eb4a-4d57-ad24-b5664e026307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_sizing_container_examples():\n",
+    "    \"\"\"Test continer utility.\"\"\"\n",
+    "    # Test that container works with combine_classes\n",
+    "    result = combine_classes(container, \"mx-auto\", \"px-4\")\n",
+    "    assert result == \"container mx-auto px-4\"\n",
+    "    \n",
+    "    # Test different ways to use container\n",
+    "    assert str(container) == \"container\"\n",
+    "    assert container() == \"container\"\n",
+    "    assert container.build() == \"container\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_sizing_container_examples()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "41b73a02-5161-4092-aee0-4718cbeaacf0",
    "metadata": {},
@@ -686,15 +709,6 @@
     "    assert max_h.describe() == \"Maximum height utilities for setting maximum element height\"\n",
     "    assert size_util.describe() == \"Size utilities for setting both width and height simultaneously\"\n",
     "    assert container.describe() == \"Responsive container with breakpoint-based max-widths\"\n",
-    "    \n",
-    "    # Test that container works with combine_classes\n",
-    "    result = combine_classes(container, \"mx-auto\", \"px-4\")\n",
-    "    assert result == \"container mx-auto px-4\"\n",
-    "    \n",
-    "    # Test different ways to use container\n",
-    "    assert str(container) == \"container\"\n",
-    "    assert container() == \"container\"\n",
-    "    assert container.build() == \"container\"\n",
     "\n",
     "# Run the tests\n",
     "test_sizing_factory_documentation()"
