--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Optional, Union\n",
+    "from typing import Optional, Union, Dict, Any\n",
     "from cjm_fasthtml_tailwind.core.base import TailwindScale, combine_classes\n",
     "from cjm_fasthtml_tailwind.builders.scales import (\n",
     "    DirectionalScaledFactory, ScaledFactory, SPACING_CONFIG\n",
@@ -365,6 +365,23 @@
     "        self.y = ScaledFactory(\"space-y\", SPACING_CONFIG, \"Vertical spacing between child elements\")\n",
     "        self.x_reverse = SingleValueFactory(\"space-x-reverse\", \"Reverse the order of horizontal spacing\")\n",
     "        self.y_reverse = SingleValueFactory(\"space-y-reverse\", \"Reverse the order of vertical spacing\")\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the space factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': 'Access sub-factories as attributes (x, y, x_reverse, y_reverse)',\n",
+    "            'options': {\n",
+    "                'sub_factories': {\n",
+    "                    'x': 'Horizontal spacing between child elements',\n",
+    "                    'y': 'Vertical spacing between child elements',\n",
+    "                    'x_reverse': 'Reverse horizontal spacing order',\n",
+    "                    'y_reverse': 'Reverse vertical spacing order'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "space = SpaceFactory() # The space factory"
    ]
@@ -626,39 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf95cb5-a2d1-4f98-b7ef-f1ddc58f13f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91a641f1-ba1c-4d2a-b55a-d419e4c3d3ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ceddfd13-1328-4978-9694-d85b83826010",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8f1251ea-b337-40f0-af76-7b0d20f49f8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24074ae2-9899-4301-b606-019f9773096a",
    "metadata": {},
    "outputs": [],
    "source": []
