--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Optional, Union, Literal, List, Dict\n",
+    "from typing import Optional, Union, Literal, List, Dict, Any\n",
     "from dataclasses import dataclass\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
     "    TailwindScale, combine_classes, StandardUtility, UtilityFactory,\n",
@@ -320,6 +320,15 @@
     "            # Default grow means grow-1\n",
     "            return super().__call__(1)\n",
     "        return super().__call__(value)\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this grow factory.\"\"\"\n",
+    "        info = super().get_info()\n",
+    "        # Add special note about default behavior\n",
+    "        info['options']['default_behavior'] = 'Calling grow() without arguments creates grow-1'\n",
+    "        return info\n",
     "\n",
     "# Create flex grow factory\n",
     "grow = GrowFactory() # The flex grow factory"
@@ -392,6 +401,15 @@
     "            # Default shrink means shrink-1\n",
     "            return super().__call__(1)\n",
     "        return super().__call__(value)\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this shrink factory.\"\"\"\n",
+    "        info = super().get_info()\n",
+    "        # Add special note about default behavior\n",
+    "        info['options']['default_behavior'] = 'Calling shrink() without arguments creates shrink-1'\n",
+    "        return info\n",
     "\n",
     "# Create flex shrink factory\n",
     "shrink = ShrinkFactory() # The flex shrink factory"
@@ -662,6 +680,23 @@
     "    ) -> str:  # The 'col-auto' CSS class\n",
     "        \"Return the col-auto utility class.\"\n",
     "        return \"col-auto\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this column factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [\n",
+    "                'Arbitrary grid-column values (e.g., \"1 / 3\", \"span 2 / span 2\")'\n",
+    "            ],\n",
+    "            'options': {\n",
+    "                'prefix': self.prefix,\n",
+    "                'special_properties': {\n",
+    "                    'auto': 'Returns \"col-auto\" for automatic column placement'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "col = ColFactory() # The grid column factory"
    ]
@@ -762,6 +797,23 @@
     "    ) -> str:  # The 'row-auto' CSS class\n",
     "        \"Return the row-auto utility class.\"\n",
     "        return \"row-auto\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this row factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [\n",
+    "                'Arbitrary grid-row values (e.g., \"2 / 5\", \"span 3 / span 3\")'\n",
+    "            ],\n",
+    "            'options': {\n",
+    "                'prefix': self.prefix,\n",
+    "                'special_properties': {\n",
+    "                    'auto': 'Returns \"row-auto\" for automatic row placement'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "row = RowFactory() # The grid row factory"
    ]
@@ -903,6 +955,18 @@
     "        elif is_arbitrary_value(value) or value not in [\"auto\", \"min\", \"max\", \"fr\"]:\n",
     "            return f\"auto-cols-[{value}]\"\n",
     "        return f\"auto-cols-{value}\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this auto columns factory.\"\"\"\n",
+    "        info = super().get_info()\n",
+    "        info['valid_inputs'] = [\n",
+    "            'Predefined values: auto, min, max, fr',\n",
+    "            'Arbitrary values: Any CSS grid-auto-columns value (e.g., \"200px\", \"minmax(0, 1fr)\")',\n",
+    "            'Custom properties: CSS variables starting with -- (e.g., \"--column-size\")'\n",
+    "        ]\n",
+    "        return info\n",
     "\n",
     "class AutoRowsFactory(SimpleFactory):\n",
     "    \"\"\"Factory for auto-rows with custom value support.\"\"\"\n",
@@ -921,6 +985,18 @@
     "        elif is_arbitrary_value(value) or value not in [\"auto\", \"min\", \"max\", \"fr\"]:\n",
     "            return f\"auto-rows-[{value}]\"\n",
     "        return f\"auto-rows-{value}\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this auto rows factory.\"\"\"\n",
+    "        info = super().get_info()\n",
+    "        info['valid_inputs'] = [\n",
+    "            'Predefined values: auto, min, max, fr',\n",
+    "            'Arbitrary values: Any CSS grid-auto-rows value (e.g., \"200px\", \"minmax(0, 1fr)\")',\n",
+    "            'Custom properties: CSS variables starting with -- (e.g., \"--row-size\")'\n",
+    "        ]\n",
+    "        return info\n",
     "\n",
     "# Create the factories\n",
     "auto_cols = AutoColsFactory() # The auto columns factory\n",
@@ -1000,6 +1076,22 @@
     "    ) -> ScaledUtility:  # A new gap utility instance\n",
     "        \"\"\"Handle attribute access for named values.\"\"\"\n",
     "        return self._base.__getattr__(name)\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about the gap factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': self._base.get_info()['valid_inputs'],\n",
+    "            'options': {\n",
+    "                'prefix': 'gap',\n",
+    "                'sub_factories': {\n",
+    "                    'x': 'Column gap utilities (gap-x-*)',\n",
+    "                    'y': 'Row gap utilities (gap-y-*)'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "gap = GapFactory() # The gap factory\n",
     "\n",
